--- a/paracetamol.html
+++ b/paracetamol.html
@@ -15,6 +15,11 @@
   /* badge */
   --badgeBg:#d9f6e8;
   --badgeFg:#16634a;
+
+  /* drug icon (FOLLOW THE THEME) */
+  --iconBg: var(--badgeBg);
+  --iconFill: #ffffff;
+  --iconStroke: var(--accent);
 }
 
 body { font-family: Arial, sans-serif; background:#e6f2f8; color:#123047; margin:0; }
@@ -49,13 +54,20 @@ a.back span { font-size:1.1rem; }
 }
 .drug-meta{ display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap; gap:10px; margin-bottom:8px; }
 .drug-info{ display:flex; align-items:center; gap:10px; }
-.drug-icon{ width:44px; height:44px; border-radius:12px; background:#e3f2fd; display:flex; align-items:center; justify-content:center; }
+
+/* drug icon follows the theme (same idea as other pages) */
+.drug-icon{
+  width:44px; height:44px; border-radius:12px;
+  background:var(--iconBg);
+  display:flex; align-items:center; justify-content:center;
+  color:var(--iconStroke);
+}
 .drug-icon svg{ width:30px; height:30px; }
+
 .drug-labels{ display:flex; flex-direction:column; }
 .drug-name{ font-weight:600; font-size:0.95rem; }
 .drug-form{ font-size:0.82rem; color:#29516e; }
 
-/* FIX: badge uses theme variables (so Danish can be blue) */
 .badge{
   display:inline-flex; align-items:center; gap:4px;
   background:var(--badgeBg); color:var(--badgeFg);
@@ -68,7 +80,7 @@ a.back span { font-size:1.1rem; }
   width:24px; height:24px; border-radius:999px; display:inline-flex; align-items:center; justify-content:center;
   font-size:0.9rem; color:#123047;
 }
-/* Identical icon color blocks as your other pages */
+/* identical icon color blocks as the other medicines */
 .section-icon.use{ background:#e3f2fd; }
 .section-icon.dose{ background:#e2f5ea; }
 .section-icon.side{ background:#fff3e0; }
@@ -120,9 +132,9 @@ a.back span { font-size:1.1rem; }
     <div class="drug-meta">
       <div class="drug-info">
         <div class="drug-icon" aria-hidden="true">
-          <svg viewBox="0 0 64 64">
-            <ellipse cx="32" cy="32" rx="22" ry="14" fill="#e8f3ff" stroke="#1a73e8" stroke-width="3"/>
-            <line x1="20" y1="20" x2="44" y2="44" stroke="#1a73e8" stroke-width="4"/>
+          <svg viewBox="0 0 64 64" aria-hidden="true" focusable="false">
+            <ellipse cx="32" cy="32" rx="22" ry="14" fill="var(--iconFill)" stroke="currentColor" stroke-width="3"/>
+            <line x1="20" y1="20" x2="44" y2="44" stroke="currentColor" stroke-width="4"/>
           </svg>
         </div>
         <div class="drug-labels">
@@ -133,7 +145,6 @@ a.back span { font-size:1.1rem; }
       <div class="badge" id="badgeText">Akhris fudud oo kooban</div>
     </div>
 
-    <!-- 1: Isticmaalka -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon use">💊</div>
@@ -142,7 +153,6 @@ a.back span { font-size:1.1rem; }
       <ul id="sec1List"></ul>
     </div>
 
-    <!-- 2: Qiyaasta -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon dose">⏰</div>
@@ -151,7 +161,6 @@ a.back span { font-size:1.1rem; }
       <ul id="sec2List"></ul>
     </div>
 
-    <!-- 3: Waxyeellooyinka -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon side">⚠️</div>
@@ -160,7 +169,6 @@ a.back span { font-size:1.1rem; }
       <ul id="sec3List"></ul>
     </div>
 
-    <!-- 4: Interaktioner -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon interact">⇆</div>
@@ -169,7 +177,6 @@ a.back span { font-size:1.1rem; }
       <ul id="sec4List"></ul>
     </div>
 
-    <!-- 5: Digniino -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon warn">!</div>
@@ -178,7 +185,6 @@ a.back span { font-size:1.1rem; }
       <ul id="sec5List"></ul>
     </div>
 
-    <!-- 6: Ramadan -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon ramadan">☾</div>
@@ -187,7 +193,6 @@ a.back span { font-size:1.1rem; }
       <ul id="sec6List"></ul>
     </div>
 
-    <!-- 7: Cunto -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon food">🍽️</div>
@@ -196,7 +201,6 @@ a.back span { font-size:1.1rem; }
       <ul id="sec7List"></ul>
     </div>
 
-    <!-- 8: Opbevaring -->
     <div class="section">
       <div class="section-header">
         <div class="section-icon store">⧉</div>
@@ -216,10 +220,10 @@ a.back span { font-size:1.1rem; }
 /* RTL languages */
 const RTL = new Set(["ar","fa","ur","prs","ps"]);
 
-/* Colors per language */
+/* Theme per language (Danish must be BLUE) */
 const THEME = {
-  so:  { c1:"#0066cc", c2:"#00a676", accent:"#00a676", badgeBg:"#d9f6e8", badgeFg:"#16634a" }, // default green badge
-  da:  { c1:"#0b5ed7", c2:"#0dcaf0", accent:"#0b5ed7", badgeBg:"#e7f0ff", badgeFg:"#0b5ed7" }, // FIX: blue badge in Danish
+  so:  { c1:"#0066cc", c2:"#00a676", accent:"#00a676", badgeBg:"#d9f6e8", badgeFg:"#16634a" }, // default
+  da:  { c1:"#0b5ed7", c2:"#0dcaf0", accent:"#0b5ed7", badgeBg:"#e7f0ff", badgeFg:"#0b5ed7" }, // blue
   en:  { c1:"#0b3d91", c2:"#3a86ff", accent:"#3a86ff", badgeBg:"#e7f0ff", badgeFg:"#0b3d91" },
   ar:  { c1:"#5b2a86", c2:"#9b5de5", accent:"#7b2cbf", badgeBg:"#efe7ff", badgeFg:"#5b2a86" },
   tr:  { c1:"#c1121f", c2:"#ff6b6b", accent:"#c1121f", badgeBg:"#ffe7ea", badgeFg:"#8a0f17" },
@@ -231,11 +235,17 @@ const THEME = {
 
 function applyTheme(lang){
   const th = THEME[lang] || THEME.so;
+
   document.documentElement.style.setProperty("--c1", th.c1);
   document.documentElement.style.setProperty("--c2", th.c2);
   document.documentElement.style.setProperty("--accent", th.accent);
+
   document.documentElement.style.setProperty("--badgeBg", th.badgeBg);
   document.documentElement.style.setProperty("--badgeFg", th.badgeFg);
+
+  /* drug icon follows theme: background = badgeBg, stroke = accent */
+  document.documentElement.style.setProperty("--iconBg", th.badgeBg);
+  document.documentElement.style.setProperty("--iconStroke", th.accent);
 }
 
 function setDirLang(lang){
@@ -287,38 +297,45 @@ const T = {
       "Daawadan waxaa loo isticmaalaa <span class='highlight'>xanuun fudud</span> iyo <span class='highlight'>qandho</span> sida madax-xanuun, ilko-xanuun iyo murqo xanuun (muskelsmerter).",
       "Waa daawo aan xanuunka kaa suulinayn ama kaa qaadayn, laakiin waxay kaa caawineysaa in xanuunku yaraado oo aad ka nasato."
     ],
+
     sec2Title: "Qiyaasta (Dosering)",
     sec2: [
       "Qofka weyn (voksne): <span class='highlight'>500–1000 mg</span> mar, ugu badnaan 4 jeer maalintii.",
       "Ha dhaafin <span class='highlight'>4 gram maalintii</span> (4000 mg).",
       "Caruurta: qiyaasta waxaa lagu saleeyaa miisaanka (vægt) – raac qoraalka ama talada dhakhtarka iyo farmashiyaha."
     ],
+
     sec3Title: "Waxyeellooyinka (Bivirkninger)",
     sec3: [
       "Badanaa wuu fiican yahay. Laakiin marar dhif ah, wuxuu keenaa finan, cuncun ama neef-qabatin oo xasaasiyad (allergi) ah.",
       "Haddii aad qaadato qiyaas aad u badan muddo dheer, beerka (leveren) wuu dhaawici karaa."
     ],
+
     sec4Title: "Isdhexgalka daawooyinka (Interaktioner)",
     sec4: [
       "Ka taxaddar haddii aad qaadato daawooyin kale oo qandho/xanuun ah oo isla paracetamol ku jiro (tusaale daawo hargab).",
-      "Had iyo jeer u sheeg farmashiyaha daawo kasta aad isticmaasho."
+      "Had iyo jeer u sheeg farmashiyaha daawo kasta aad isticmausho."
     ],
+
     sec5Title: "Digniino (Advarsler)",
     sec5: [
       "Ha qaadan qiyaas ka badan tan lagu qoray baakadka, ama uu dhakhtarku kuu sheegay.",
       "Haddii xanuunka ama qandhada aanad ka caafimaadin 3–5 maalmood gudahood, la xiriir dhakhtarka."
     ],
+
     sec6Title: "Ramadaan iyo soonka (Ramadan og faste)",
     sec6: [
       "Kaniiniga afka (tablet) wuxuu jebinayaa soonka maalinta Ramadaanka.",
       "Haddii ay suurtagal tahay, qorshee qiyaasta in aad qaadato fiidkii (afurka) ama suxuurta.",
       "Haddii aad aad u xanuunsan tahay, la hadal dhakhtarka si aad u hesho ogolansho."
     ],
+
     sec7Title: "Cunto iyo cabitaan (Mad og drikke)",
     sec7: [
       "Paracetamol waxaa la qaadan karaa cuntada ka hor ama cuntada ka dib.",
       "Haddii aad calool xanuun isku ogtahay, cunto yar ka hormari."
     ],
+
     sec8Title: "Kaydinta daawada (Opbevaring)",
     sec8: [
       "Ku hay daawada meel ka fog carruurta yar yar, kana hooseysa 25 °C.",
@@ -824,7 +841,6 @@ function applyLang(lang){
   document.getElementById("footer1").textContent = d.footer1;
   document.getElementById("footer2").innerHTML = d.footer2;
 
-  /* keep language when going back */
   const backA = document.querySelector("a.back");
   const base = backA.getAttribute("href").split("?")[0];
   backA.setAttribute("href", base + "?lang=" + encodeURIComponent(lang));
