--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ footer{
   </div>
 
   <h3 id="pickTitle" style="margin:10px 0 14px; color:#123047;">
-    Dooro daawada hoos ka muuqata <span style="color:#607089;" id="pickSmall">(Vælg den ønskede medicin nedenfor)</span>
+    Dooro daawada aad rabto oo hoos ka muuqata <span style="color:#607089;" id="pickSmall">(Vælg den ønskede medicin nedenfor)</span>
   </h3>
 
   <ul class="index-list">
@@ -216,7 +216,7 @@ const SUB = {
 
   marevan: { so:"dhiig-khafiifin", da:"blodfortyndende", en:"blood thinner", ar:"مُميّع للدم", tr:"kan sulandırıcı", ur:"خون پتلا کرنے والی", fa:"رقیق‌کننده خون", prs:"رقیق‌کننده خون", ps:"د وینې نری کوونکی" },
   xarelto: { so:"dhiig-khafiifin", da:"blodfortyndende", en:"blood thinner", ar:"مُميّع للدم", tr:"kan sulandırıcı", ur:"خون پتلا کرنے والی", fa:"رقیق‌کننده خون", prs:"رقیق‌کننده خون", ps:"د وینې نری کوونکی" },
-  eliquis: { so:"dhiig-khafiifin", da:"blodfortyndende", en:"blood thinner", ar:"مُميّع للدم", tr:"kan sulandırıcı", ur:"خون پتلا کرنے والی", fa:"رقیق‌کننده خون", prs:"رقیق‌کننده خون", ps:"د وینې نری کوونکی" },
+  eliquis: { so:"dhiig-khafiifin", da:"blodfortyndende", en:"blood thinner", ar:"مُميّع للدم", tr:"kan sulandırıcı", ur:"خون پتلا کرنے والی", fa:"رقیق‌کننده خون", prs:"رقیق‌کنende خون", ps:"د وینې نری کوونکی" },
 
   metformin: { so:"sonkoroow", da:"diabetes", en:"diabetes", ar:"السكري", tr:"diyabet", ur:"ذیابیطس", fa:"دیابت", prs:"دیابت", ps:"شکر" },
   insulin: { so:"sonkoroow", da:"diabetes", en:"diabetes", ar:"السكري", tr:"diyabet", ur:"ذیابیطس", fa:"دیابت", prs:"دیابت", ps:"شکر" },
@@ -250,8 +250,8 @@ const T = {
     hdrTitle:"Medicin udtrykt på somalisk",
     hdrSubtitle:"Liis kooban oo loogu talagalay waalidiinta & bukaannada Soomaaliyeed",
     langLabel:"Dooro luqadda:",
-    pickTitle:"Dooro daawada hoos ka muuqata",
-    pickSmall:"(Dooro daawada aad rabto hoos)",
+    pickTitle:"Dooro daawada aad rabto oo hoos ka muuqata",
+    pickSmall:"(Vælg den ønskede medicin nedenfor)",
     footer1:"Qoraalladan waa hagitaan guud oo fudud. Ma beddelayso talada tooska ah ee farmashiyaha ama dhakhtarka.",
     footer2:"(Disse tekster erstatter ikke rådgivning fra apoteket eller lægen.)",
     footerStrong:"Qoraalkan waxaa diyaariyay farmashiiste: Ibraahim Dahir Xanaf",
@@ -262,8 +262,8 @@ const T = {
     hdrTitle:"Medicin på somalisk",
     hdrSubtitle:"En kort liste til patienter og pårørende.",
     langLabel:"Vælg sprog:",
-    pickTitle:"Vælg medicin nedenfor",
-    pickSmall:"(Vælg den ønskede medicin nedenfor)",
+    pickTitle:"Vælg den ønskede medicin nedenfor",
+    pickSmall:"",
     footer1:"Teksterne er generel vejledning og erstatter ikke rådgivning fra apoteket eller lægen.",
     footer2:"",
     footerStrong:"Udarbejdet af farmakonomen: Ibrahim Dahir Hanaf",
@@ -274,8 +274,8 @@ const T = {
     hdrTitle:"Medicines in Somali",
     hdrSubtitle:"A short list for patients and relatives.",
     langLabel:"Choose language:",
-    pickTitle:"Choose a medicine below",
-    pickSmall:"(Choose the desired medicine below)",
+    pickTitle:"Choose the desired medicine below",
+    pickSmall:"",
     footer1:"These texts are general guidance and do not replace advice from your pharmacy or doctor.",
     footer2:"",
     footerStrong:"Prepared by pharmaconomist: Ibrahim Dahir Hanaf",
@@ -286,8 +286,8 @@ const T = {
     hdrTitle:"أدوية باللغة الصومالية",
     hdrSubtitle:"قائمة مختصرة للمرضى وأفراد الأسرة",
     langLabel:"اختر اللغة:",
-    pickTitle:"اختر دواءً من القائمة",
-    pickSmall:"(اختر الدواء المطلوب أدناه)",
+    pickTitle:"اختر الدواء المطلوب أدناه",
+    pickSmall:"",
     footer1:"هذه النصوص معلومات عامة ولا تغني عن نصيحة الصيدلية أو الطبيب.",
     footer2:"",
     footerStrong:"إعداد: إبراهيم ظاهر حنف (اختصاصي صيدلة)",
@@ -298,8 +298,8 @@ const T = {
     hdrTitle:"Somalice ilaç bilgileri",
     hdrSubtitle:"Hasta ve yakınları için kısa liste.",
     langLabel:"Dil seçin:",
-    pickTitle:"Aşağıdan ilacı seçin",
-    pickSmall:"(Aşağıdan istediğiniz ilacı seçin)",
+    pickTitle:"Aşağıdan istediğiniz ilacı seçin",
+    pickSmall:"",
     footer1:"Bu metinler genel bilgilendirme amaçlıdır; eczane veya doktor tavsiyesinin yerine geçmez.",
     footer2:"",
     footerStrong:"Hazırlayan: farmakonomist Ibrahim Dahir Hanaf",
@@ -310,8 +310,8 @@ const T = {
     hdrTitle:"سومالی زبان میں ادویات",
     hdrSubtitle:"مریضوں اور اہلِ خانہ کے لیے مختصر فہرست",
     langLabel:"زبان منتخب کریں:",
-    pickTitle:"نیچے سے دوا منتخب کریں",
-    pickSmall:"(نیچے مطلوبہ دوا منتخب کریں)",
+    pickTitle:"نیچے مطلوبہ دوا منتخب کریں",
+    pickSmall:"",
     footer1:"یہ تحریریں عمومی رہنمائی ہیں اور ڈاکٹر یا فارمیسی کے مشورے کا متبادل نہیں۔",
     footer2:"",
     footerStrong:"مرتب کردہ: فارماکونومسٹ ابراہیم ظاہر حنف",
@@ -322,8 +322,8 @@ const T = {
     hdrTitle:"داروها به زبان سومالی",
     hdrSubtitle:"فهرست کوتاه برای بیماران و خانواده‌ها",
     langLabel:"انتخاب زبان:",
-    pickTitle:"دارو را از فهرست انتخاب کنید",
-    pickSmall:"(داروی موردنظر را در زیر انتخاب کنید)",
+    pickTitle:"داروی موردنظر را در زیر انتخاب کنید",
+    pickSmall:"",
     footer1:"این متن‌ها راهنمای عمومی هستند و جایگزین توصیه پزشک یا داروخانه نیستند.",
     footer2:"",
     footerStrong:"تهیه‌کننده: فارماکونومیست ابراهیم ظاهر حنف",
@@ -334,8 +334,8 @@ const T = {
     hdrTitle:"دواها به زبان سومالی",
     hdrSubtitle:"فهرست کوتاه برای مریضان و خانواده‌ها",
     langLabel:"انتخاب زبان:",
-    pickTitle:"دوا را از فهرست انتخاب کنید",
-    pickSmall:"(دوای مورد نظر را در زیر انتخاب کنید)",
+    pickTitle:"دوای مورد نظر را در زیر انتخاب کنید",
+    pickSmall:"",
     footer1:"این متن‌ها رهنمای عمومی هستند و جایگزین مشوره داکتر یا دواخانه نیستند.",
     footer2:"",
     footerStrong:"تهیه‌کننده: فارماکونومیست ابراهیم ظاهر حنف",
@@ -346,8 +346,8 @@ const T = {
     hdrTitle:"درمل په سومالي ژبه",
     hdrSubtitle:"د ناروغانو او کورنۍ لپاره لنډ لېست",
     langLabel:"ژبه وټاکئ:",
-    pickTitle:"لاندې درمل وټاکئ",
-    pickSmall:"(لاندې مطلوب درمل وټاکئ)",
+    pickTitle:"لاندې مطلوب درمل وټاکئ",
+    pickSmall:"",
     footer1:"دا متنونه عمومي لارښوونې دي او د ډاکټر يا درملتون مشوره نه بدلوي.",
     footer2:"",
     footerStrong:"چمتو کوونکی: فارمکونومېسټ ابراهیم ظاهر حنف",
